Updating install script to use composer prefer-dist instead of source.

--- a/bin/install
+++ b/bin/install
@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-./bin/composer install --prefer-source --no-interaction
+./bin/composer install --prefer-dist --no-interaction --no-dev
