--- a/bin/install
+++ b/bin/install
@@ -1,16 +1,10 @@
 #!/usr/bin/env bash
+
+set -e
+
 DIR=$( cd "$( dirname "$0" )" && pwd )
 COMPOSER="$DIR/composer install --prefer-dist --no-interaction --no-dev"
 NPM="npm install --production"
 
 $COMPOSER
-EXITCODE=$?
-if [ $EXITCODE -ne 0 ]; then
-    exit $EXITCODE;
-fi
-
 $NPM
-EXITCODE=$?
-if [ $EXITCODE -ne 0 ]; then
-    exit $EXITCODE;
-fi
