--- a/bin/install
+++ b/bin/install
@@ -6,8 +6,11 @@ DIR=$( cd "$( dirname "$0" )" && pwd )
 
 COMPOSER="$DIR/composer install --prefer-dist --no-interaction --no-dev"
 NPM="npm install --production"
-BUNDLER="bundle install" # use flags: --deployment --binstubs for isolated gems
+#BUNDLER="bundle install" # use flags: --deployment --binstubs for isolated gems
+BUNDLER="bundle install --deployment"
 
 $COMPOSER
 $NPM
+
+gem list
 $BUNDLER
