Add script to generate a random encryption secret. Will run in bin/install whenever $HAL_ENVIRONMENT is present.

--- a/bin/install
+++ b/bin/install
@@ -7,12 +7,14 @@ DIR=$( cd "$( dirname "$0" )" && pwd )
 COMPOSER="composer install --prefer-dist --dev"
 NPM="npm install"
 BUNDLER="bundle install"
+SECRETGEN=""
 
 # If deploying, use production settings
 if [ -n "$HAL_ENVIRONMENT" ]; then
     COMPOSER="composer install --prefer-dist --no-interaction --ansi --no-dev --optimize-autoloader"
     NPM="npm install --production"
     BUNDLER="bundle install --frozen"
+    SECRETGEN="$DIR/generate-encryption-secret"
 fi
 
 "$DIR/"$COMPOSER
@@ -20,3 +22,5 @@ $NPM
 
 gem install bundler
 $BUNDLER
+
+$SECRETGEN
