--- a/bin/install
+++ b/bin/install
@@ -5,13 +5,13 @@ set -e
 DIR=$( cd "$( dirname "$0" )" && pwd )
 
 COMPOSER_SHOW_INSTALLED="composer show --installed"
-COMPOSER="composer install --prefer-dist --dev"
+COMPOSER="composer install --prefer-dist"
 NPM="npm install"
 BUNDLER="bundle install"
 
 # If deploying, use production settings
 if [ -n "$HAL_ENVIRONMENT" ]; then
-    COMPOSER="composer install --prefer-dist --no-dev --no-interaction --ansi --optimize-autoloader --profile"
+    COMPOSER="composer install --prefer-dist --no-dev --no-interaction --ansi --optimize-autoloader --profile --no-progress"
     NPM="npm install --production --color=always"
     BUNDLER="bundle install --frozen"
 fi
