Add a test! wow!

--- a/bin/install
+++ b/bin/install
@@ -35,7 +35,7 @@ set -e
 
 # run
 
-COMPOSER="composer install --prefer-dist"
+COMPOSER="composer install --prefer-dist --no-progress"
 COMPOSER_SHOW_INSTALLED="composer show --installed"
 
 NPM="npm install"
